--- a/awards/templates/navbar.html
+++ b/awards/templates/navbar.html
@@ -1,54 +1,62 @@
 <!--Navbar -->
-<nav class="mb-1 navbar navbar-expand-lg navbar-dark secondary-color lighten-1">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
-          aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
-          <ul class="navbar-nav mr-auto">
+<nav class="mb-1 navbar navbar-expand-lg navbar-dark indigo" info-color">
+    <a class="navbar-brand" href="">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
+        aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
+                <a class="nav-link" href="">Home
+                    <span class="sr-only">(current)</span>
+                </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+            <!-- Dropdown -->
+
+
+        </ul>
+        <ul class="navbar-nav ml-auto nav-flex-icons">
+            <li class="nav-item" style="margin-right:300px;">
+                <form class="form-inline my-2 my-lg-0 ml-auto" action="">
+                    <input class="form-control" type="search" name="project" placeholder="Search Project"
+                        aria-label="Search">
+                    <button class="btn  btn-primary" btn-md my-2 my-sm-0 ml-3" type="submit">Search</button>
+                </form>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+
+            <li class="nav-item" style="margin-top:0px;">
+                <a class="btn btn btn-primary"btn-md my-2 my-sm-0 ml-3" href="">Submit
+                    Project</a>
             </li>
+
+            <li class="nav-item" style="margin-right:20px;">
+                <a class="nav-link btn  btn-primary"btn-sm my-2 my-sm-0 ml-3" href="">Sign
+                    Up</a>
+            </li>
+
+
+
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-555" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">Dropdown
-              </a>
-              <div class="dropdown-menu dropdown-secondary" aria-labelledby="navbarDropdownMenuLink-555">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
+                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-user"></i>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right dropdown-default"
+                    aria-labelledby="navbarDropdownMenuLink-333">
+                   
+                    <a class="dropdown-item" style="color:red"><strong></strong></a>
+                    <a class="dropdown-item" href="">Change Password</a>
+                    <a class="dropdown-item" href="">Profile</a>
+                    <a class="dropdown-item" href="">Logout</a>
+                    
+                    <a class="dropdown-item" href="">Login</a>
+                   
+
+
+                </div>
             </li>
-          </ul>
-          <ul class="navbar-nav ml-auto nav-flex-icons">
-            <li class="nav-item">
-              <a class="nav-link waves-effect waves-light">1
-                <i class="fas fa-envelope"></i>
-              </a>
-            </li>
-            <li class="nav-item avatar dropdown">
-              <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-55" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.jpg" class="rounded-circle z-depth-0"
-                  alt="avatar image">
-              </a>
-              <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary"
-                aria-labelledby="navbarDropdownMenuLink-55">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <!--/.Navbar -->
+        </ul>
+    </div>
+</nav>
+<!--/.Navbar -->
