this commit makes changes to index.html

--- a/awards/templates/index.html
+++ b/awards/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block content %}
 <div class="container-fluid">
         <div>
             <h4 class="text-center heading">Sites of the day</4>
