--- a/awards/templates/project_review.html
+++ b/awards/templates/project_review.html
@@ -1,4 +1,4 @@
-{% extends 'Moringa_Project_Awards/base.html' %}
+{% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
 <div class="container-fluid">
