--- a/awards/templates/navbar.html
+++ b/awards/templates/navbar.html
@@ -1,6 +1,6 @@
 <!--Navbar -->
 <nav class="mb-1 navbar navbar-expand-lg navbar-dark indigo" info-color">
-    <a class="navbar-brand" href="">Navbar</a>
+    <a class="navbar-brand" href=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
         aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="">Home
+                <a class="nav-link" href="{% url 'home' %}">Home
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
