--- a/awards/templates/navbar.html
+++ b/awards/templates/navbar.html
@@ -18,7 +18,7 @@
         </ul>
         <ul class="navbar-nav ml-auto nav-flex-icons">
             <li class="nav-item" style="margin-right:300px;">
-                <form class="form-inline my-2 my-lg-0 ml-auto" action="">
+                <form class="form-inline my-2 my-lg-0 ml-auto" action="{% url 'search_results' %}">
                     <input class="form-control" type="search" name="project" placeholder="Search Project"
                         aria-label="Search">
                     <button class="btn  btn-primary" btn-md my-2 my-sm-0 ml-3" type="submit">Search</button>
