--- a/awards/templates/navbar.html
+++ b/awards/templates/navbar.html
@@ -47,7 +47,7 @@
                    
                     <a class="dropdown-item" style="color:red"><strong></strong></a>
                     <a class="dropdown-item" href="">Change Password</a>
-                    <a class="dropdown-item" href="">Profile</a>
+                    <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
                     <a class="dropdown-item" href="">Logout</a>
                     
                     <a class="dropdown-item" href="">Login</a>
