--- a/awards/templates/navbar.html
+++ b/awards/templates/navbar.html
@@ -45,7 +45,7 @@
                 <div class="dropdown-menu dropdown-menu-right dropdown-default"
                     aria-labelledby="navbarDropdownMenuLink-333">
                    
-                    <a class="dropdown-item" style="color:red"><strong></strong></a>
+                    <a class="dropdown-item" style="color:red"><strong>{{user}}</strong></a>
                     <a class="dropdown-item" href="">Change Password</a>
                     <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
                     <a class="dropdown-item" href="">Logout</a>
