--- a/awards/templates/navbar.html
+++ b/awards/templates/navbar.html
@@ -24,16 +24,17 @@
                         <button class="btn  btn-primary" btn-md my-2 my-sm-0 ml-3" type="submit">Search</button>
                     </form>
                 </li>
-    
+                {% if user.is_authenticated %}
                 <li class="nav-item" style="margin-top:0px;">
-                    <a class="btn btn btn-primary"btn-md my-2 my-sm-0 ml-3" href="">Submit
+                    <a class="btn btn btn-primary"btn-md my-2 my-sm-0 ml-3" href="{%url 'new-project' %}"">Submit
                         Project</a>
                 </li>
-    
+                {% else %} 
                 <li class="nav-item" style="margin-right:20px;">
-                    <a class="nav-link btn  btn-primary"btn-sm my-2 my-sm-0 ml-3" href="">Sign
+                    <a class="nav-link btn  btn-primary"btn-sm my-2 my-sm-0 ml-3" href="/accounts/register/"">Sign
                         Up</a>
                 </li>
+                {% endif %}
     
     
     
@@ -44,14 +45,14 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right dropdown-default"
                         aria-labelledby="navbarDropdownMenuLink-333">
-                       
+                        {% if user.is_authenticated %}
                         <a class="dropdown-item" style="color:red"><strong>{{user}}</strong></a>
-                        <a class="dropdown-item" href="">Change Password</a>
+                        <a class="dropdown-item" href="/accounts/password/change">Change Password</a>
                         <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-                        <a class="dropdown-item" href="">Logout</a>
-                        
-                        <a class="dropdown-item" href="">Login</a>
-                       
+                        <a class="dropdown-item" href="/logout">Logout</a>
+                        {% else %}
+                        <a class="dropdown-item" href="/accounts/login">Login</a>
+                        {% endif %}
     
     
                     </div>
