--- a/awards/templates/navbar.html
+++ b/awards/templates/navbar.html
@@ -45,7 +45,7 @@
                         <div class="dropdown-menu dropdown-menu-right dropdown-default"
                             aria-labelledby="navbarDropdownMenuLink-333">
                             {% if user.is_authenticated %}
-                            <a class="dropdown-item" style="color:red"><strong>{{user}}</strong></a>
+                            <a class="dropdown-item" style="color:green"><strong>{{user}}</strong></a>
                             <a class="dropdown-item" href="/accounts/password/change">Change Password</a>
                             <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
                             <a class="dropdown-item" href="/logout">Logout</a>
